src/objects/WSONE__DutchLeadGenerationInstanceError__c.object
<CustomObject>
    <fields>
        <fullName>WSONE__DossierNumber__c</fullName>
        <label>Dossier Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WSONE__DutchLeadGenerationInstance__c</fullName>
        <label>Dutch Lead Generation Instance</label>
        <referenceTo>WSONE__DutchLeadGenerationInstance__c</referenceTo>
        <relationshipLabel>Dutch Lead Generation Instance Errors</relationshipLabel>
        <relationshipName>DutchLeadGenerationInstanceErrors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>WSONE__Error__c</fullName>
        <label>Error</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WSONE__EstablishmentNumber__c</fullName>
        <label>Establishment Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Dutch Lead Generation Instance Error</label>
    <nameField>
        <displayFormat>DLGIR-{00000000}</displayFormat>
        <label>Dutch Lead Generation Instance Error Nam</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dutch Lead Generation Instance Errors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>